objects/Promotion__c.object
<CustomObject>
    <description>This object tracks the changes that are promoted to the next Salesforce instance.</description>
    <fields>
        <fullName>Create_Full_Permission_Sets_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added permission sets to a Full Permission Sets deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Permission Sets Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Full_Profiles_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if you wish to move added profiles to a Full Profiles deployment step.  This will remove them from the Metadata deployment step.</inlineHelpText>
        <label>Create Full Profiles Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Promotions (Destination Environment)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Destination Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of an Org Credential to the Destination Environment.</inlineHelpText>
        <label>Destination Org Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Org__c.Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Destination_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Promotions (Destination Org Credential)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will provide the ability to deploy User Stories within a Release.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Deployment_Complete_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Environment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The credential to the Source Environment that should be used when creating a deployment. This may be auto-populated, if left blank, based on the project&apos;s deployment flow if you are the owner of an Org Credential to the Source Environment.</inlineHelpText>
        <label>Source Org Credential</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Org__c.Environment__c</field>
                <operation>equals</operation>
                <valueField>$Source.Source_Environment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Promotions (Source Org Credential)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <nameField>
        <displayFormat>P{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>